
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int HANDLE ;
typedef int BOOL ;


 int FALSE ;
 unsigned long PAGE_EXECUTE_READWRITE ;
 scalar_t__ ReadProcessMemory (int ,void*,char*,int,int *) ;
 int TRUE ;
 scalar_t__ VirtualProtectEx (int ,void*,int,unsigned long,unsigned long*) ;
 scalar_t__ WriteProcessMemory (int ,void*,char*,int,int *) ;

BOOL BreakpointSet(HANDLE hProcess, void *addr, char *originalByte){
     unsigned long oldProtect;
     if(
     VirtualProtectEx(hProcess, addr, 1, PAGE_EXECUTE_READWRITE, &oldProtect) &&
     ReadProcessMemory(hProcess, addr, originalByte, 1, ((void*)0)) &&
     WriteProcessMemory(hProcess, addr, "\xCC", 1, ((void*)0)) &&
     VirtualProtectEx(hProcess, addr, 1, oldProtect, &oldProtect))
     return TRUE;
     else return FALSE;
}
