; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_14705.c_BreakpointSet.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_14705.c_BreakpointSet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGE_EXECUTE_READWRITE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [2 x i8] c"\CC\00", align 1
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BreakpointSet(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = load i64, i64* @PAGE_EXECUTE_READWRITE, align 8
  %12 = call i64 @VirtualProtectEx(i32 %9, i8* %10, i32 1, i64 %11, i64* %8)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %33

14:                                               ; preds = %3
  %15 = load i32, i32* %5, align 4
  %16 = load i8*, i8** %6, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i64 @ReadProcessMemory(i32 %15, i8* %16, i8* %17, i32 1, i32* null)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %33

20:                                               ; preds = %14
  %21 = load i32, i32* %5, align 4
  %22 = load i8*, i8** %6, align 8
  %23 = call i64 @WriteProcessMemory(i32 %21, i8* %22, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 1, i32* null)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %33

25:                                               ; preds = %20
  %26 = load i32, i32* %5, align 4
  %27 = load i8*, i8** %6, align 8
  %28 = load i64, i64* %8, align 8
  %29 = call i64 @VirtualProtectEx(i32 %26, i8* %27, i32 1, i64 %28, i64* %8)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %25
  %32 = load i32, i32* @TRUE, align 4
  store i32 %32, i32* %4, align 4
  br label %35

33:                                               ; preds = %25, %20, %14, %3
  %34 = load i32, i32* @FALSE, align 4
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %33, %31
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i64 @VirtualProtectEx(i32, i8*, i32, i64, i64*) #1

declare dso_local i64 @ReadProcessMemory(i32, i8*, i8*, i32, i32*) #1

declare dso_local i64 @WriteProcessMemory(i32, i8*, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
